// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 133824,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 133929,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 295995,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 313132,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 321504,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 307006,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 214813,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 214894,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 248823,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 225488,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 382524,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 225581,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 372618,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 311890,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 301922,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 192888,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 205739,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 381311,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 250465,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 365525,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 243877,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 365590,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 257354,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 277730,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 379004,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 392302,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 322710,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 387565,
}
`;
